Update subtitle text in index.html

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 <div class="container">
 
   <h1>Getting Started</h1>
-  <p class="subtitle">Everything you need to ship your first Nimbus workflow in under 5 minutes.</p>
+  <p class="subtitle">Everything you need to ship your first Nimbus workflow in under 5 minutes. Changed.</p>
 
   <h2>Installation</h2>
   <p>Install the Nimbus SDK via npm:</p>
