--- a/changelog.html
+++ b/changelog.html
@@ -1,89 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Changelog – Nimbus Docs</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap');
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Inter', sans-serif; background: #0b0f1a; color: #c9d1d9; line-height: 1.7; min-height: 100vh; }
-    header { border-bottom: 1px solid #1e2533; padding: 16px 32px; display: flex; align-items: center; justify-content: space-between; backdrop-filter: blur(12px); position: sticky; top: 0; background: rgba(11, 15, 26, 0.85); z-index: 10; }
-    .logo { display: flex; align-items: center; gap: 10px; font-weight: 700; font-size: 18px; color: #fff; text-decoration: none; }
-    .logo svg { flex-shrink: 0; }
-    .logo span.badge { font-size: 11px; font-weight: 500; background: linear-gradient(135deg, #6366f1, #a78bfa); color: #fff; padding: 2px 8px; border-radius: 999px; margin-left: 4px; }
-    header nav a { color: #8b95a5; text-decoration: none; font-size: 14px; font-weight: 500; margin-left: 28px; transition: color 0.2s; }
-    header nav a:hover { color: #fff; }
-    .container { max-width: 720px; margin: 0 auto; padding: 56px 24px 80px; }
-    h1 { font-size: 32px; font-weight: 700; color: #fff; margin-bottom: 8px; }
-    .subtitle { font-size: 15px; color: #6b7589; margin-bottom: 48px; }
-    h2 { font-size: 20px; font-weight: 600; color: #e2e8f0; margin-top: 40px; margin-bottom: 12px; padding-bottom: 8px; border-bottom: 1px solid #1e2533; }
-    h3 { font-size: 16px; font-weight: 600; color: #c9d1d9; margin-top: 20px; margin-bottom: 8px; }
-    p { margin-bottom: 16px; font-size: 15px; }
-    ul { margin: 8px 0 16px 24px; font-size: 15px; }
-    li { margin-bottom: 6px; }
-    code { font-family: 'JetBrains Mono', monospace; font-size: 13px; background: #161b2e; padding: 2px 6px; border-radius: 4px; color: #a78bfa; }
-    .version-tag { display: inline-block; font-size: 12px; font-weight: 500; background: linear-gradient(135deg, #6366f1, #a78bfa); color: #fff; padding: 2px 10px; border-radius: 999px; margin-right: 8px; }
-    .date { color: #4b5568; font-size: 14px; }
-    footer { text-align: center; padding: 32px; font-size: 13px; color: #3d4555; border-top: 1px solid #1e2533; }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #0b0f1a;
+      color: #c9d1d9;
+      line-height: 1.7;
+      min-height: 100vh;
+    }
+
+    header {
+      border-bottom: 1px solid #1e2533;
+      padding: 16px 32px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      backdrop-filter: blur(12px);
+      position: sticky;
+      top: 0;
+      background: rgba(11, 15, 26, 0.85);
+      z-index: 10;
+    }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-weight: 700;
+      font-size: 18px;
+      color: #fff;
+      text-decoration: none;
+    }
+
+    .logo svg {
+      flex-shrink: 0;
+    }
+
+    .logo span.badge {
+      font-size: 11px;
+      font-weight: 500;
+      background: linear-gradient(135deg, #6366f1, #a78bfa);
+      color: #fff;
+      padding: 2px 8px;
+      border-radius: 999px;
+      margin-left: 4px;
+    }
+
+    header nav a {
+      color: #8b95a5;
+      text-decoration: none;
+      font-size: 14px;
+      font-weight: 500;
+      margin-left: 28px;
+      transition: color 0.2s;
+    }
+
+    header nav a:hover {
+      color: #fff;
+    }
+
+    .container {
+      max-width: 720px;
+      margin: 0 auto;
+      padding: 56px 24px 80px;
+    }
+
+    h1 {
+      font-size: 32px;
+      font-weight: 700;
+      color: #fff;
+      margin-bottom: 8px;
+    }
+
+    .subtitle {
+      font-size: 15px;
+      color: #6b7589;
+      margin-bottom: 48px;
+    }
+
+    h2 {
+      font-size: 20px;
+      font-weight: 600;
+      color: #e2e8f0;
+      margin-top: 40px;
+      margin-bottom: 12px;
+      padding-bottom: 8px;
+      border-bottom: 1px solid #1e2533;
+    }
+
+    h3 {
+      font-size: 16px;
+      font-weight: 600;
+      color: #c9d1d9;
+      margin-top: 20px;
+      margin-bottom: 8px;
+    }
+
+    p {
+      margin-bottom: 16px;
+      font-size: 15px;
+    }
+
+    ul {
+      margin: 8px 0 16px 24px;
+      font-size: 15px;
+    }
+
+    li {
+      margin-bottom: 6px;
+    }
+
+    code {
+      font-family: 'JetBrains Mono', monospace;
+      font-size: 13px;
+      background: #161b2e;
+      padding: 2px 6px;
+      border-radius: 4px;
+      color: #a78bfa;
+    }
+
+    .version-tag {
+      display: inline-block;
+      font-size: 12px;
+      font-weight: 500;
+      background: linear-gradient(135deg, #6366f1, #a78bfa);
+      color: #fff;
+      padding: 2px 10px;
+      border-radius: 999px;
+      margin-right: 8px;
+    }
+
+    .date {
+      color: #4b5568;
+      font-size: 14px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 32px;
+      font-size: 13px;
+      color: #3d4555;
+      border-top: 1px solid #1e2533;
+    }
   </style>
 </head>
+
 <body>
 
-<header>
-  <a href="index.html" class="logo">
-    <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-      <circle cx="12" cy="12" r="10" fill="url(#g1)"/>
-      <path d="M7 13c1-3 3-5 5-5s4 2 5 5" stroke="#fff" stroke-width="1.5" stroke-linecap="round"/>
-      <circle cx="12" cy="9" r="2" fill="#fff" opacity="0.6"/>
-      <defs><linearGradient id="g1" x1="2" y1="2" x2="22" y2="22"><stop stop-color="#6366f1"/><stop offset="1" stop-color="#a78bfa"/></linearGradient></defs>
-    </svg>
-    Nimbus <span class="badge">Docs</span>
-  </a>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="workflows.html">Workflows</a>
-    <a href="api-reference.html">API</a>
-  </nav>
-</header>
+  <header>
+    <a href="index.html" class="logo">
+      <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+        <circle cx="12" cy="12" r="10" fill="url(#g1)" />
+        <path d="M7 13c1-3 3-5 5-5s4 2 5 5" stroke="#fff" stroke-width="1.5" stroke-linecap="round" />
+        <circle cx="12" cy="9" r="2" fill="#fff" opacity="0.6" />
+        <defs>
+          <linearGradient id="g1" x1="2" y1="2" x2="22" y2="22">
+            <stop stop-color="#6366f1" />
+            <stop offset="1" stop-color="#a78bfa" />
+          </linearGradient>
+        </defs>
+      </svg>
+      Nimbus <span class="badge">Docs</span>
+    </a>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="workflows.html">Workflows</a>
+      <a href="api-reference.html">API</a>
+    </nav>
+  </header>
 
-<div class="container">
+  <div class="container">
 
-  <h1>Changelog</h1>
-  <p class="subtitle">What's new in the Nimbus platform.</p>
+    <h1>Changelog</h1>
+    <p class="subtitle">What's new in the Nimbus platform.test1</p>
 
-  <h2><span class="version-tag">v2.3.0</span> <span class="date">February 10, 2026</span></h2>
-  <ul>
-    <li>Added push notification channel for templates</li>
-    <li>Workflow execution logs now retained for 90 days</li>
-    <li>New <code>workflows.clone()</code> SDK method</li>
-  </ul>
+    <h2><span class="version-tag">v2.3.0</span> <span class="date">February 10, 2026</span></h2>
+    <ul>
+      <li>Added push notification channel for templates</li>
+      <li>Workflow execution logs now retained for 90 days</li>
+      <li>New <code>workflows.clone()</code> SDK method</li>
+    </ul>
 
-  <h2><span class="version-tag">v2.2.0</span> <span class="date">January 15, 2026</span></h2>
-  <ul>
-    <li>Scheduled triggers with cron expressions</li>
-    <li>Bulk event ingestion endpoint (<code>POST /events/batch</code>)</li>
-    <li>Dashboard dark mode improvements</li>
-  </ul>
+    <h2><span class="version-tag">v2.2.0</span> <span class="date">January 15, 2026</span></h2>
+    <ul>
+      <li>Scheduled triggers with cron expressions</li>
+      <li>Bulk event ingestion endpoint (<code>POST /events/batch</code>)</li>
+      <li>Dashboard dark mode improvements</li>
+    </ul>
 
-  <h2><span class="version-tag">v2.1.0</span> <span class="date">December 3, 2025</span></h2>
-  <ul>
-    <li>SMS templates with 160-character validation</li>
-    <li>Workflow branching with conditional steps</li>
-    <li>Bug fix: duplicate events no longer trigger multiple runs</li>
-  </ul>
+    <h2><span class="version-tag">v2.1.0</span> <span class="date">December 3, 2025</span></h2>
+    <ul>
+      <li>SMS templates with 160-character validation</li>
+      <li>Workflow branching with conditional steps</li>
+      <li>Bug fix: duplicate events no longer trigger multiple runs</li>
+    </ul>
 
-  <h2><span class="version-tag">v2.0.0</span> <span class="date">October 20, 2025</span></h2>
-  <ul>
-    <li>Complete SDK rewrite with TypeScript support</li>
-    <li>New REST API v1 with improved error responses</li>
-    <li>Template variable system (<code>{{var}}</code> syntax)</li>
-    <li>Breaking: removed legacy <code>/flows</code> endpoints</li>
-  </ul>
+    <h2><span class="version-tag">v2.0.0</span> <span class="date">October 20, 2025</span></h2>
+    <ul>
+      <li>Complete SDK rewrite with TypeScript support</li>
+      <li>New REST API v1 with improved error responses</li>
+      <li>Template variable system (<code>{{var}}</code> syntax)</li>
+      <li>Breaking: removed legacy <code>/flows</code> endpoints</li>
+    </ul>
 
-</div>
+  </div>
 
-<footer>© 2026 Nimbus, Inc. — All rights reserved.</footer>
+  <footer>© 2026 Nimbus, Inc. — All rights reserved.</footer>
 
 </body>
+
 </html>
