--- a/api-reference.html
+++ b/api-reference.html
@@ -1,87 +1,288 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>API Reference – Nimbus Docs</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap');
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Inter', sans-serif; background: #0b0f1a; color: #c9d1d9; line-height: 1.7; min-height: 100vh; }
-    header { border-bottom: 1px solid #1e2533; padding: 16px 32px; display: flex; align-items: center; justify-content: space-between; backdrop-filter: blur(12px); position: sticky; top: 0; background: rgba(11, 15, 26, 0.85); z-index: 10; }
-    .logo { display: flex; align-items: center; gap: 10px; font-weight: 700; font-size: 18px; color: #fff; text-decoration: none; }
-    .logo svg { flex-shrink: 0; }
-    .logo span.badge { font-size: 11px; font-weight: 500; background: linear-gradient(135deg, #6366f1, #a78bfa); color: #fff; padding: 2px 8px; border-radius: 999px; margin-left: 4px; }
-    header nav a { color: #8b95a5; text-decoration: none; font-size: 14px; font-weight: 500; margin-left: 28px; transition: color 0.2s; }
-    header nav a:hover { color: #fff; }
-    .container { max-width: 720px; margin: 0 auto; padding: 56px 24px 80px; }
-    h1 { font-size: 32px; font-weight: 700; color: #fff; margin-bottom: 8px; }
-    .subtitle { font-size: 15px; color: #6b7589; margin-bottom: 48px; }
-    h2 { font-size: 20px; font-weight: 600; color: #e2e8f0; margin-top: 40px; margin-bottom: 12px; padding-bottom: 8px; border-bottom: 1px solid #1e2533; }
-    p { margin-bottom: 16px; font-size: 15px; }
-    code { font-family: 'JetBrains Mono', monospace; font-size: 13px; background: #161b2e; padding: 2px 6px; border-radius: 4px; color: #a78bfa; }
-    pre { background: #111827; border: 1px solid #1e2533; border-radius: 10px; padding: 20px; overflow-x: auto; margin: 16px 0 24px; font-size: 13px; line-height: 1.65; }
-    pre code { background: none; padding: 0; color: #c9d1d9; }
-    .keyword { color: #c084fc; }
-    .string { color: #34d399; }
-    .comment { color: #4b5568; font-style: italic; }
-    .func { color: #60a5fa; }
-    .callout { background: linear-gradient(135deg, rgba(99,102,241,0.08), rgba(167,139,250,0.06)); border-left: 3px solid #6366f1; border-radius: 0 8px 8px 0; padding: 16px 20px; margin: 20px 0; font-size: 14px; }
-    .callout strong { color: #a78bfa; }
-    table { width: 100%; border-collapse: collapse; margin: 16px 0 24px; font-size: 14px; }
-    th { text-align: left; color: #8b95a5; font-weight: 500; padding: 10px 12px; border-bottom: 1px solid #1e2533; font-size: 12px; text-transform: uppercase; letter-spacing: 0.5px; }
-    td { padding: 10px 12px; border-bottom: 1px solid #141a2a; }
-    td code { font-size: 12px; }
-    footer { text-align: center; padding: 32px; font-size: 13px; color: #3d4555; border-top: 1px solid #1e2533; }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #0b0f1a;
+      color: #c9d1d9;
+      line-height: 1.7;
+      min-height: 100vh;
+    }
+
+    header {
+      border-bottom: 1px solid #1e2533;
+      padding: 16px 32px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      backdrop-filter: blur(12px);
+      position: sticky;
+      top: 0;
+      background: rgba(11, 15, 26, 0.85);
+      z-index: 10;
+    }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-weight: 700;
+      font-size: 18px;
+      color: #fff;
+      text-decoration: none;
+    }
+
+    .logo svg {
+      flex-shrink: 0;
+    }
+
+    .logo span.badge {
+      font-size: 11px;
+      font-weight: 500;
+      background: linear-gradient(135deg, #6366f1, #a78bfa);
+      color: #fff;
+      padding: 2px 8px;
+      border-radius: 999px;
+      margin-left: 4px;
+    }
+
+    header nav a {
+      color: #8b95a5;
+      text-decoration: none;
+      font-size: 14px;
+      font-weight: 500;
+      margin-left: 28px;
+      transition: color 0.2s;
+    }
+
+    header nav a:hover {
+      color: #fff;
+    }
+
+    .container {
+      max-width: 720px;
+      margin: 0 auto;
+      padding: 56px 24px 80px;
+    }
+
+    h1 {
+      font-size: 32px;
+      font-weight: 700;
+      color: #fff;
+      margin-bottom: 8px;
+    }
+
+    .subtitle {
+      font-size: 15px;
+      color: #6b7589;
+      margin-bottom: 48px;
+    }
+
+    h2 {
+      font-size: 20px;
+      font-weight: 600;
+      color: #e2e8f0;
+      margin-top: 40px;
+      margin-bottom: 12px;
+      padding-bottom: 8px;
+      border-bottom: 1px solid #1e2533;
+    }
+
+    p {
+      margin-bottom: 16px;
+      font-size: 15px;
+    }
+
+    code {
+      font-family: 'JetBrains Mono', monospace;
+      font-size: 13px;
+      background: #161b2e;
+      padding: 2px 6px;
+      border-radius: 4px;
+      color: #a78bfa;
+    }
+
+    pre {
+      background: #111827;
+      border: 1px solid #1e2533;
+      border-radius: 10px;
+      padding: 20px;
+      overflow-x: auto;
+      margin: 16px 0 24px;
+      font-size: 13px;
+      line-height: 1.65;
+    }
+
+    pre code {
+      background: none;
+      padding: 0;
+      color: #c9d1d9;
+    }
+
+    .keyword {
+      color: #c084fc;
+    }
+
+    .string {
+      color: #34d399;
+    }
+
+    .comment {
+      color: #4b5568;
+      font-style: italic;
+    }
+
+    .func {
+      color: #60a5fa;
+    }
+
+    .callout {
+      background: linear-gradient(135deg, rgba(99, 102, 241, 0.08), rgba(167, 139, 250, 0.06));
+      border-left: 3px solid #6366f1;
+      border-radius: 0 8px 8px 0;
+      padding: 16px 20px;
+      margin: 20px 0;
+      font-size: 14px;
+    }
+
+    .callout strong {
+      color: #a78bfa;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin: 16px 0 24px;
+      font-size: 14px;
+    }
+
+    th {
+      text-align: left;
+      color: #8b95a5;
+      font-weight: 500;
+      padding: 10px 12px;
+      border-bottom: 1px solid #1e2533;
+      font-size: 12px;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+
+    td {
+      padding: 10px 12px;
+      border-bottom: 1px solid #141a2a;
+    }
+
+    td code {
+      font-size: 12px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 32px;
+      font-size: 13px;
+      color: #3d4555;
+      border-top: 1px solid #1e2533;
+    }
   </style>
 </head>
+
 <body>
 
-<header>
-  <a href="index.html" class="logo">
-    <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-      <circle cx="12" cy="12" r="10" fill="url(#g1)"/>
-      <path d="M7 13c1-3 3-5 5-5s4 2 5 5" stroke="#fff" stroke-width="1.5" stroke-linecap="round"/>
-      <circle cx="12" cy="9" r="2" fill="#fff" opacity="0.6"/>
-      <defs><linearGradient id="g1" x1="2" y1="2" x2="22" y2="22"><stop stop-color="#6366f1"/><stop offset="1" stop-color="#a78bfa"/></linearGradient></defs>
-    </svg>
-    Nimbus <span class="badge">Docs</span>
-  </a>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="workflows.html">Workflows</a>
-    <a href="triggers.html">Triggers</a>
-  </nav>
-</header>
+  <header>
+    <a href="index.html" class="logo">
+      <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+        <circle cx="12" cy="12" r="10" fill="url(#g1)" />
+        <path d="M7 13c1-3 3-5 5-5s4 2 5 5" stroke="#fff" stroke-width="1.5" stroke-linecap="round" />
+        <circle cx="12" cy="9" r="2" fill="#fff" opacity="0.6" />
+        <defs>
+          <linearGradient id="g1" x1="2" y1="2" x2="22" y2="22">
+            <stop stop-color="#6366f1" />
+            <stop offset="1" stop-color="#a78bfa" />
+          </linearGradient>
+        </defs>
+      </svg>
+      Nimbus <span class="badge">Docs</span>
+    </a>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="workflows.html">Workflows</a>
+      <a href="triggers.html">Triggers</a>
+    </nav>
+  </header>
 
-<div class="container">
+  <div class="container">
 
-  <h1>API Reference</h1>
-  <p class="subtitle">REST endpoints for the Nimbus platform.</p>
+    <h1>API Reference</h1>
+    <p class="subtitle">REST endpoints for the Nimbus platform.test2</p>
 
-  <h2>Base URL</h2>
-  <pre><code>https://api.nimbus.dev/v1</code></pre>
-  <p>All requests require an <code>Authorization</code> header with your API key:</p>
-  <pre><code>Authorization: Bearer YOUR_API_KEY</code></pre>
+    <h2>Base URL</h2>
+    <pre><code>https://api.nimbus.dev/v1</code></pre>
+    <p>All requests require an <code>Authorization</code> header with your API key:</p>
+    <pre><code>Authorization: Bearer YOUR_API_KEY</code></pre>
 
-  <h2>Endpoints</h2>
-  <table>
-    <thead>
-      <tr><th>Method</th><th>Path</th><th>Description</th></tr>
-    </thead>
-    <tbody>
-      <tr><td><code>GET</code></td><td><code>/workflows</code></td><td>List all workflows</td></tr>
-      <tr><td><code>POST</code></td><td><code>/workflows</code></td><td>Create a workflow</td></tr>
-      <tr><td><code>GET</code></td><td><code>/workflows/:id</code></td><td>Get a workflow by ID</td></tr>
-      <tr><td><code>PATCH</code></td><td><code>/workflows/:id</code></td><td>Update a workflow</td></tr>
-      <tr><td><code>DELETE</code></td><td><code>/workflows/:id</code></td><td>Delete a workflow</td></tr>
-      <tr><td><code>POST</code></td><td><code>/events</code></td><td>Send a trigger event</td></tr>
-      <tr><td><code>GET</code></td><td><code>/executions</code></td><td>List workflow executions</td></tr>
-    </tbody>
-  </table>
+    <h2>Endpoints</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Method</th>
+          <th>Path</th>
+          <th>Description</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><code>GET</code></td>
+          <td><code>/workflows</code></td>
+          <td>List all workflows</td>
+        </tr>
+        <tr>
+          <td><code>POST</code></td>
+          <td><code>/workflows</code></td>
+          <td>Create a workflow</td>
+        </tr>
+        <tr>
+          <td><code>GET</code></td>
+          <td><code>/workflows/:id</code></td>
+          <td>Get a workflow by ID</td>
+        </tr>
+        <tr>
+          <td><code>PATCH</code></td>
+          <td><code>/workflows/:id</code></td>
+          <td>Update a workflow</td>
+        </tr>
+        <tr>
+          <td><code>DELETE</code></td>
+          <td><code>/workflows/:id</code></td>
+          <td>Delete a workflow</td>
+        </tr>
+        <tr>
+          <td><code>POST</code></td>
+          <td><code>/events</code></td>
+          <td>Send a trigger event</td>
+        </tr>
+        <tr>
+          <td><code>GET</code></td>
+          <td><code>/executions</code></td>
+          <td>List workflow executions</td>
+        </tr>
+      </tbody>
+    </table>
 
-  <h2>Example: Create a Workflow</h2>
-  <pre><code>curl -X POST https://api.nimbus.dev/v1/workflows \
+    <h2>Example: Create a Workflow</h2>
+    <pre><code>curl -X POST https://api.nimbus.dev/v1/workflows \
   -H <span class="string">"Authorization: Bearer $NIMBUS_API_KEY"</span> \
   -H <span class="string">"Content-Type: application/json"</span> \
   -d <span class="string">'{
@@ -92,27 +293,46 @@
     ]
   }'</span></code></pre>
 
-  <h2>Error Codes</h2>
-  <table>
-    <thead>
-      <tr><th>Code</th><th>Meaning</th></tr>
-    </thead>
-    <tbody>
-      <tr><td><code>400</code></td><td>Invalid request body</td></tr>
-      <tr><td><code>401</code></td><td>Missing or invalid API key</td></tr>
-      <tr><td><code>404</code></td><td>Resource not found</td></tr>
-      <tr><td><code>429</code></td><td>Rate limit exceeded</td></tr>
-      <tr><td><code>500</code></td><td>Internal server error</td></tr>
-    </tbody>
-  </table>
+    <h2>Error Codes</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Code</th>
+          <th>Meaning</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><code>400</code></td>
+          <td>Invalid request body</td>
+        </tr>
+        <tr>
+          <td><code>401</code></td>
+          <td>Missing or invalid API key</td>
+        </tr>
+        <tr>
+          <td><code>404</code></td>
+          <td>Resource not found</td>
+        </tr>
+        <tr>
+          <td><code>429</code></td>
+          <td>Rate limit exceeded</td>
+        </tr>
+        <tr>
+          <td><code>500</code></td>
+          <td>Internal server error</td>
+        </tr>
+      </tbody>
+    </table>
 
-  <div class="callout">
-    <strong>Tip:</strong> Use the <code>X-Request-Id</code> header in support tickets to help us trace issues faster.
+    <div class="callout">
+      <strong>Tip:</strong> Use the <code>X-Request-Id</code> header in support tickets to help us trace issues faster.
+    </div>
+
   </div>
 
-</div>
-
-<footer>© 2026 Nimbus, Inc. — All rights reserved.</footer>
+  <footer>© 2026 Nimbus, Inc. — All rights reserved.</footer>
 
 </body>
+
 </html>
