--- a/templates.html
+++ b/templates.html
@@ -226,7 +226,7 @@
   <div class="container">
 
     <h1>Templates</h1>
-    <p class="subtitle">Reusable email and message templates with dynamic variables.</p>
+    <p class="subtitle">Reusable email and message templates with dynamic variables.test2</p>
 
     <h2>Overview</h2>
     <p>Templates define the content sent by <code>send_email</code> and <code>send_sms</code> workflow steps. They
