--- a/triggers.html
+++ b/triggers.html
@@ -265,7 +265,7 @@
     </table>
 
     <h2>Custom Events</h2>
-    <p>Send any custom event from your application using the SDK or REST API:</p>
+    <p>Send any custom event from your application using the SDK or RE3ST API:</p>
     <pre><code><span class="keyword">await</span> nimbus.<span class="func">events.send</span>({
   name: <span class="string">'subscription.cancelled'</span>,
   payload: {
